@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -26,11 +27,11 @@ public class Model {
         return foodCollection;
     }
 
-    
     public DailyLog getOrCreateLog(LocalDate date) {
         if (date == null) {
             throw new IllegalArgumentException("Date cannot be null");
         }
+
         DailyLog existing = logs.get(date);
         if (existing != null) {
             return existing;
@@ -64,6 +65,7 @@ public class Model {
             throw new IllegalArgumentException("Date cannot be null");
         }
         selectedDate = date;
+        getOrCreateLog(selectedDate);
     }
 
     public LocalDate getSelectedDate() {
@@ -71,6 +73,11 @@ public class Model {
     }
 
     public void loadFoods() {
+        foodCollection.getAllFoods().clear(); // no afecta realmente por copia, pero lo dejo fuera abajo
+        loadFoodsFromCsv();
+    }
+
+    private void loadFoodsFromCsv() {
         try (BufferedReader br = new BufferedReader(
                 new InputStreamReader(
                         getClass().getResourceAsStream("/foods.csv"),
@@ -78,37 +85,32 @@ public class Model {
 
             String line;
             while ((line = br.readLine()) != null) {
+                if (line.trim().isEmpty()) {
+                    continue;
+                }
 
-                // only process lines starting with "b"
+                String[] parts = line.split(",");
+
                 if (line.startsWith("b")) {
-                    String[] parts = line.split(",");
-
                     String name = parts[1];
                     double calories = Double.parseDouble(parts[2]);
                     double fat = Double.parseDouble(parts[3]);
                     double carb = Double.parseDouble(parts[4]);
                     double protein = Double.parseDouble(parts[5]);
 
-                    foodCollection.addFood(new BasicFood(
-                            name, calories, fat, carb, protein));
+                    if (!foodCollection.containsFood(name)) {
+                        foodCollection.addFood(new BasicFood(name, calories, fat, carb, protein));
+                    }
 
-                    // Starting point for recipe loading (not implemented yet)
                 } else if (line.startsWith("r")) {
-
-                    String[] parts = line.split(",");
-
                     String recipeName = parts[1];
                     Recipe recipe = new Recipe(recipeName);
 
-                    // loop through ingredient pairs
                     for (int i = 2; i < parts.length; i += 2) {
                         String ingredientName = parts[i];
                         double servings = Double.parseDouble(parts[i + 1]);
 
-                        // get ingredient from FoodCollection
-                        // must already exist as a BasicFood (or previously loaded Recipe)
                         FoodComponent ingredient = foodCollection.getFood(ingredientName);
-
                         if (ingredient != null) {
                             recipe.addIngredient(ingredient, servings);
                         } else {
@@ -116,20 +118,20 @@ public class Model {
                         }
                     }
 
-                    foodCollection.addFood(recipe);
+                    if (!foodCollection.containsFood(recipeName)) {
+                        foodCollection.addFood(recipe);
+                    }
                 }
             }
         } catch (IOException e) {
-            System.err.println(" Could not load foods.csv: " + e.getMessage());
+            System.err.println("Could not load foods.csv: " + e.getMessage());
         }
     }
 
-    // Adding food to the collection and displaying it in the table
     public void addFood(FoodComponent food) {
         foodCollection.addFood(food);
     }
 
-    // Pending ..... Dialog as well
     public void addRecipe(Recipe recipe) {
         foodCollection.addFood(recipe);
     }
@@ -154,10 +156,39 @@ public class Model {
         getSelectedLog().setCalorieLimit(limit);
     }
 
+    public List<LogEntry> getSelectedLogEntries() {
+        return getSelectedLog().getEntries();
+    }
+
+    public double getSelectedLogTotalCalories() {
+        return getSelectedLog().getTotalCalories();
+    }
+
+    public int getSelectedLogFatPercent() {
+        return getSelectedLog().getFatPercent();
+    }
+
+    public int getSelectedLogCarbPercent() {
+        return getSelectedLog().getCarbPercent();
+    }
+
+    public int getSelectedLogProteinPercent() {
+        return getSelectedLog().getProteinPercent();
+    }
+
+    public double getSelectedLogWeight() {
+        return getSelectedLog().getWeight();
+    }
+
+    public double getSelectedLogCalorieLimit() {
+        return getSelectedLog().getCalorieLimit();
+    }
+
+    public boolean selectedDayIsOverLimit() {
+        return getSelectedLog().isOverLimit();
+    }
+
     public void saveData() {
-
-        // resolve log csv location and make sure the parent directory exists before writing
-
         Path logPath = resolveDataFilePath("log.csv");
 
         try {
@@ -165,19 +196,18 @@ public class Model {
                 Files.createDirectories(logPath.getParent());
             }
 
-            List<DailyLog> orderedLogs = new ArrayList<>(logs.values()); // copies all logs from the map into a list.
-            orderedLogs.sort(Comparator.comparing(dailyLog -> dailyLog.getDate())); // sorting logs by date
+            List<DailyLog> orderedLogs = new ArrayList<>(logs.values());
+            orderedLogs.sort(Comparator.comparing(DailyLog::getDate));
+
             try (BufferedWriter writer = Files.newBufferedWriter(
                     logPath,
                     java.nio.charset.StandardCharsets.UTF_8,
                     StandardOpenOption.CREATE,
                     StandardOpenOption.TRUNCATE_EXISTING)) {
 
-                // Iterate through each day 
                 for (DailyLog dailyLog : orderedLogs) {
                     LocalDate date = dailyLog.getDate();
 
-                    // f lines: one line per food entry, no combining duplicates
                     for (LogEntry entry : dailyLog.getEntries()) {
                         writer.write(String.format(
                                 "%04d,%02d,%02d,f,%s,%s",
@@ -189,7 +219,6 @@ public class Model {
                         writer.newLine();
                     }
 
-                    // w line: daily weight.
                     writer.write(String.format(
                             "%04d,%02d,%02d,w,%s",
                             date.getYear(),
@@ -198,7 +227,6 @@ public class Model {
                             Double.toString(dailyLog.getWeight())));
                     writer.newLine();
 
-                    // c line: daily calorie limit.
                     writer.write(String.format(
                             "%04d,%02d,%02d,c,%s",
                             date.getYear(),
@@ -214,31 +242,26 @@ public class Model {
     }
 
     public void loadData() {
-
-        //checks if the file exists and if not terminate
-
         Path logPath = resolveDataFilePath("log.csv");
         if (!Files.exists(logPath)) {
             return;
         }
 
-        logs.clear(); // remove all entries from log map
+        logs.clear();
 
-        try (BufferedReader reader = Files.newBufferedReader(logPath, java.nio.charset.StandardCharsets.UTF_8)) { // try to open and read the line
+        try (BufferedReader reader = Files.newBufferedReader(logPath, java.nio.charset.StandardCharsets.UTF_8)) {
             String line;
+
             while ((line = reader.readLine()) != null) {
                 if (line.trim().isEmpty()) {
                     continue;
                 }
 
-                String[] parts = line.split(","); // splits csv by commas
-                
-                // Skip rows that don't have yyyy,mm,dd,type,value fields
+                String[] parts = line.split(",");
                 if (parts.length < 5) {
                     continue;
                 }
 
-                // parse date from csv to get or create that days log
                 LocalDate date = LocalDate.of(
                         Integer.parseInt(parts[0]),
                         Integer.parseInt(parts[1]),
@@ -247,26 +270,25 @@ public class Model {
                 DailyLog dailyLog = getOrCreateLog(date);
                 String type = parts[3];
 
-                if ("f".equals(type) && parts.length >= 6) { //food row needs name and servings fields
-                    FoodComponent food = foodCollection.getFood(parts[4]); // get food name
+                if ("f".equals(type) && parts.length >= 6) {
+                    FoodComponent food = foodCollection.getFood(parts[4]);
                     if (food != null) {
                         dailyLog.addEntry(food, Double.parseDouble(parts[5]));
                     }
                 } else if ("w".equals(type)) {
-                    dailyLog.setWeight(Double.parseDouble(parts[4])); // in "w" line part 4 is weight
+                    dailyLog.setWeight(Double.parseDouble(parts[4]));
                 } else if ("c".equals(type)) {
-                    dailyLog.setCalorieLimit(Double.parseDouble(parts[4])); // in c this is calorie limit
+                    dailyLog.setCalorieLimit(Double.parseDouble(parts[4]));
                 }
             }
         } catch (IOException | NumberFormatException e) {
-            System.err.println("Error loading log.csv: " + e.getMessage()); 
+            System.err.println("Error loading log.csv: " + e.getMessage());
         }
     }
 
     private Path resolveDataFilePath(String fileName) {
-        Path current = Path.of(System.getProperty("user.dir")).toAbsolutePath(); // get working directorys abs path
+        Path current = Paths.get(System.getProperty("user.dir")).toAbsolutePath();
 
-        // go up parent directories looking for an existing bin.filename
         while (current != null) {
             Path candidate = current.resolve("bin").resolve(fileName);
             if (Files.exists(candidate)) {
@@ -274,7 +296,7 @@ public class Model {
             }
             current = current.getParent();
         }
-        return Path.of(System.getProperty("user.dir"), "bin", fileName).toAbsolutePath();  // returns abs path of file
-    }
 
+        return Paths.get(System.getProperty("user.dir"), "bin", fileName).toAbsolutePath();
+    }
 }
